--- a/landing-page-v4/styles/components/Navbar.module.scss
+++ b/landing-page-v4/styles/components/Navbar.module.scss
@@ -18,6 +18,7 @@
 
     &_logo {
         width: 85px;
+        cursor: pointer;
     }
 
     &_list {
@@ -26,6 +27,7 @@
 
             li {
                 padding: 0px 30px 0px 30px;
+                cursor: pointer;
             }
         }
     }
