--- a/nft/styles/globals.scss
+++ b/nft/styles/globals.scss
@@ -1,7 +1,7 @@
 html,
 body {
+  background-color: black;
   padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -12,5 +12,9 @@ a {
 }
 
 * {
+  margin: 0;
   box-sizing: border-box;
 }
+
+// Vendors
+@import "./vendors/tailwinds";
